Completed TOP Recipe begginer excercise

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a
               href="../odin-recipes/recipes/lasagna.html"
               class="btn btn-primary"
-              >Bon Apetit</a
+              >Bon Appetit</a
             >
           </div>
         </div>
@@ -59,7 +59,7 @@
             <a
               href="../odin-recipes/recipes/turkeyMeatBalls.html"
               class="btn btn-primary"
-              >Bon Apetit</a
+              >Bon Appetit</a
             >
           </div>
         </div>
@@ -76,7 +76,7 @@
             <a
               href="../odin-recipes/recipes/pastaSalad.html"
               class="btn btn-primary"
-              >Bon Apetit</a
+              >Bon Appetit</a
             >
           </div>
         </div>
